Basics of WorldFormat interface